kubernetes/apps/security/openbao/restore-test/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scratch-isolation
  namespace: openbao-restore-test
spec:
  endpointSelector: {}
  ingressDeny:
    - fromEntities:
        - all
  egressDeny:
    - toEntities:
        - all
